Update documentation for String#encode{,!} [ci skip]

These methods take keywords, not a hash.

From tjschuck (T.J. Schuck)

Fixes [Bug #17364]